--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
 .hidden {
     display: none;
 }
+
+
+body{
+    background-color: #6666ab;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+input {
+    width: 250px;
+    height: 0px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 10px;
+    font-size: 15px;
+    padding: 20px;
+    color: white;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h2 {
+    font-size: 4em;
+}
+
+input::placeholder{
+    color : white;
+}
+
+ul {
+    font-size: 30px;
+}
+
+li {
+    font-size: 30px;
+    list-style: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+#quote {
+    font-size: 1.2em;
+}
+#weather {
+    margin-top: 10px;
+}
